--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
       <a data-url="http://yoursite.com/2018/03/06/learnJava1/" data-id="cjeef5siz0000qx9l0deslv6d" class="article-share-link">Teilen</a>
       
       
+  <ul class="article-tag-list"><li class="article-tag-list-item"><a class="article-tag-list-link" href="tags/java/">java</a></li><li class="article-tag-list-item"><a class="article-tag-list-link" href="tags/reading-note/">reading-note</a></li></ul>
+
     </footer>
   </div>
   
@@ -534,7 +536,7 @@ git config --global alias.lg &quot;log --color --graph --pretty=format:&apos;%Cr
   <div class="widget-wrap">
     <h3 class="widget-title">Tags</h3>
     <div class="widget">
-      <ul class="tag-list"><li class="tag-list-item"><a class="tag-list-link" href="tags/Efficiency/">Efficiency</a></li><li class="tag-list-item"><a class="tag-list-link" href="tags/basic/">basic</a></li><li class="tag-list-item"><a class="tag-list-link" href="tags/git/">git</a></li><li class="tag-list-item"><a class="tag-list-link" href="tags/tech/">tech</a></li></ul>
+      <ul class="tag-list"><li class="tag-list-item"><a class="tag-list-link" href="tags/Efficiency/">Efficiency</a></li><li class="tag-list-item"><a class="tag-list-link" href="tags/basic/">basic</a></li><li class="tag-list-item"><a class="tag-list-link" href="tags/git/">git</a></li><li class="tag-list-item"><a class="tag-list-link" href="tags/java/">java</a></li><li class="tag-list-item"><a class="tag-list-link" href="tags/reading-note/">reading-note</a></li><li class="tag-list-item"><a class="tag-list-link" href="tags/tech/">tech</a></li></ul>
     </div>
   </div>
 
@@ -544,7 +546,7 @@ git config --global alias.lg &quot;log --color --graph --pretty=format:&apos;%Cr
   <div class="widget-wrap">
     <h3 class="widget-title">Tag Cloud</h3>
     <div class="widget tagcloud">
-      <a href="tags/Efficiency/" style="font-size: 10px;">Efficiency</a> <a href="tags/basic/" style="font-size: 10px;">basic</a> <a href="tags/git/" style="font-size: 10px;">git</a> <a href="tags/tech/" style="font-size: 10px;">tech</a>
+      <a href="tags/Efficiency/" style="font-size: 10px;">Efficiency</a> <a href="tags/basic/" style="font-size: 10px;">basic</a> <a href="tags/git/" style="font-size: 10px;">git</a> <a href="tags/java/" style="font-size: 10px;">java</a> <a href="tags/reading-note/" style="font-size: 10px;">reading-note</a> <a href="tags/tech/" style="font-size: 10px;">tech</a>
     </div>
   </div>
 
